feat(login): construcao do layout base

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -101,3 +101,18 @@
     @apply text-lg font-semibold;
   }
 }
+
+@layer components {
+  .clipped {
+    clip: rect(0 0 0 0);
+    border: 0;
+    -webkit-clip-path: inset(50%);
+    clip-path: inset(50%);
+    display: block;
+    margin: 0 -1px -1px 0;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    z-index: -1;
+  }
+}
