--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -30,6 +30,10 @@
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
 
+    --gov-br: 34 83 174;
+    --gov-br-hover: 24 65 141;
+    --gov-br-foreground: 255 255 255;
+
     --border: 214.3 31.8% 91.4%;
     --input: #E8E1E1;
     --ring: 222.2 84% 4.9%;
