--- a/backend/src/main/resources/templates/ficha/header.html
+++ b/backend/src/main/resources/templates/ficha/header.html
@@ -1,11 +1,16 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org/" lang="pt">
-<header th:fragment="header" class="header">
-    <img
-            class="logo-plataforma"
-            th:src="@{images/logo_vallengeo.png}"
-            alt="Logo da plataforma Vallengeo"
-    />
-    <h1>Ficha do Imóvel</h1>
-</header>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8"/>
+    <title>Title</title>
+    <style>
+      .header {
+        width: 100%;
+        height: 40px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="header"></div>
+  </body>
 </html>
