--- a/backend/src/main/resources/templates/ficha/caracterizacao.html
+++ b/backend/src/main/resources/templates/ficha/caracterizacao.html
@@ -1,25 +1,8 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org/" lang="pt">
-<header th:fragment="caracterizacao" class="caracterizacao">
+<header th:fragment="caracterizacao" class="caracterizacao no-break">
     <div class="card">
         <h2>Caracterização do imóvel</h2>
-        <div class="row">
-            <div class="col">
-
-            </div>
-            <div class="col">
-
-            </div>
-
-            <div class="col">
-
-            </div>
-
-            <div class="col">
-
-            </div>
-        </div>
-
         <table class="tabela-caracterizacao">
             <tr>
                 <td>
@@ -51,22 +34,22 @@
             <tr>
                 <td>
                     <h4>Área do terreno</h4>
-                    <p th:if="${caracterizacaoImovel != null && caracterizacaoImovel.areaTerreno != null}"
-                       th:text="${caracterizacaoImovel.areaTerreno}"></p>
-                    <p th:if="${caracterizacaoImovel == null || caracterizacaoImovel.areaTerreno == null}">-</p>
+                    <p th:if="${caracterizacaoImovel != null && caracterizacaoImovel.areaTerrenoFormatada != null}"
+                       th:text="${caracterizacaoImovel.areaTerrenoFormatada}"></p>
+                    <p th:if="${caracterizacaoImovel == null || caracterizacaoImovel.areaTerrenoFormatada == null}">-</p>
                 </td>
                 <td>
                     <h4>Testada principal</h4>
-                    <p th:if="${caracterizacaoImovel != null && caracterizacaoImovel.testadaPrincipal != null}"
-                       th:text="${caracterizacaoImovel.testadaPrincipal}"></p>
-                    <p th:if="${caracterizacaoImovel == null || caracterizacaoImovel.testadaPrincipal == null}">-</p>
+                    <p th:if="${caracterizacaoImovel != null && caracterizacaoImovel.testadaPrincipalFormatada != null}"
+                       th:text="${caracterizacaoImovel.testadaPrincipalFormatada}"></p>
+                    <p th:if="${caracterizacaoImovel == null || caracterizacaoImovel.testadaPrincipalFormatada == null}">-</p>
                 </td>
 
                 <td>
                     <h4>Fracção ideal</h4>
-                    <p th:if="${caracterizacaoImovel != null && caracterizacaoImovel.fracaoIdeal != null}"
-                       th:text="${caracterizacaoImovel.fracaoIdeal}"></p>
-                    <p th:if="${caracterizacaoImovel == null || caracterizacaoImovel.fracaoIdeal == null}">-</p>
+                    <p th:if="${caracterizacaoImovel != null && caracterizacaoImovel.fracaoIdealFormatada != null}"
+                       th:text="${caracterizacaoImovel.fracaoIdealFormatada}"></p>
+                    <p th:if="${caracterizacaoImovel == null || caracterizacaoImovel.fracaoIdealFormatada == null}">-</p>
                 </td>
                 <td>
                     <h4>Data de inclusão</h4>
