--- a/backend/src/main/resources/templates/ficha/georreferenciamento.html
+++ b/backend/src/main/resources/templates/ficha/georreferenciamento.html
@@ -3,6 +3,7 @@
 <header th:fragment="georreferenciamento" class="georreferenciamento">
     <div class="card">
         <h2>Georreferenciamento</h2>
+        <div id="mapa" class="mapa no-break"  style="border-radius: 25px !important;"></div>
     </div>
 </header>
 </html>
