--- a/backend/src/main/resources/templates/ficha/representante.html
+++ b/backend/src/main/resources/templates/ficha/representante.html
@@ -5,7 +5,7 @@
         <h2>Representante do imóvel</h2>
 
         <div class="container" th:if="${representantes != null}" th:each="dados,iter : ${representantes}">
-            <table th:if="${dados.tipoPessoa =='FISICA'}" class="tabela-representante">
+            <table th:if="${dados.tipoPessoa =='FISICA'}" class="tabela-representante no-break">
                 <tr>
                     <td colspan="2">
                         <h4>Nome Completo</h4>
@@ -90,7 +90,7 @@
             </table>
 
             <div th:if="${dados.tipoPessoa =='JURIDICA'}">
-                <table class="tabela-representante">
+                <table class="tabela-representante no-break">
                     <tr>
                         <td colspan="2">
                             <h4>Nome completo representante da empresa</h4>
@@ -179,122 +179,123 @@
                     </tr>
                 </table>
 
+                <div class="no-break">
+                    <h3>Informações da empresa</h3>
+                    <table class="tabela-representante">
+                        <tr>
+                            <td colspan="3">
+                                <h4>Razão Social da empresa</h4>
+                                <p th:if="${dados.razaoSocial != null}" th:text="${dados.razaoSocial}"></p>
+                                <p th:if="${dados.razaoSocial == null}">-</p>
+                            </td>
+                            <td>
+                                <h4>CNPJ</h4>
+                                <p th:if="${dados.cnpj != null}" th:text="${dados.cnpj}"></p>
+                                <p th:if="${dados.cnpj == null}">-</p>
+                            </td>
 
-                <h3>Informações da empresa</h3>
+                        </tr>
+
+                        <tr>
+                            <td>
+                                <h4>CEP</h4>
+                                <p th:if="${dados.endereco != null && dados.endereco.cep != null}"
+                                   th:text="${dados.endereco.cep}"></p>
+                                <p th:if="${dados.endereco == null || dados.endereco.cep == null}">-</p>
+                            </td>
+
+                            <td colspan="2">
+                                <h4>Endereço</h4>
+                                <p th:if="${dados.endereco != null && dados.endereco.logradouro != null}"
+                                   th:text="${dados.endereco.logradouro}"></p>
+                                <p th:if="${dados.endereco == null || dados.endereco.logradouro == null}">-</p>
+                            </td>
+
+                            <td>
+                                <h4>Número</h4>
+                                <p th:if="${dados.endereco != null && dados.endereco.numero != null}"
+                                   th:text="${dados.endereco.numero}"></p>
+                                <p th:if="${dados.endereco == null || dados.endereco.numero == null}">-</p>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>
+                                <h4>Complemento</h4>
+                                <p th:if="${dados.endereco != null && dados.endereco.complemento != null}"
+                                   th:text="${dados.endereco.complemento}"></p>
+                                <p th:if="${dados.endereco == null || dados.endereco.complemento == null}">-</p>
+                            </td>
+                            <td>
+                                <h4>Bairro</h4>
+                                <p th:if="${dados.endereco != null && dados.endereco.bairro != null}"
+                                   th:text="${dados.endereco.bairro}"></p>
+                                <p th:if="${dados.endereco == null || dados.endereco.bairro == null}">-</p>
+                            </td>
+
+                            <td>
+                                <h4>Cidade</h4>
+                                <p th:if="${dados.endereco != null && dados.endereco.municipio != null && dados.endereco.municipio.estado != null && dados.endereco.municipio.estado.nome != null}"
+                                   th:text="${dados.endereco.municipio.estado.nome}"></p>
+                                <p th:if="${dados.endereco == null || dados.endereco.municipio == null || dados.endereco.municipio.estado == null || dados.endereco.municipio.estado.nome == null}">
+                                    -</p>
+                            </td>
+                            <td>
+                                <h4>Estado</h4>
+                                <p th:if="${dados.endereco != null && dados.endereco.municipio != null && dados.endereco.municipio.estado != null && dados.endereco.municipio.estado.nome != null}"
+                                   th:text="${dados.endereco.municipio.estado.nome}"></p>
+                                <p th:if="${dados.endereco == null || dados.endereco.municipio == null || dados.endereco.municipio.estado == null || dados.endereco.municipio.estado.nome == null}">
+                                    -</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <h4>Telefone</h4>
+                                <p th:if="${dados.telefone != null}"
+                                   th:text="${dados.telefone}"></p>
+                                <p th:if="${dados.telefone == null}">-</p>
+                            </td>
+                            <td colspan="2">
+                                <h4>E-mail</h4>
+                                <p th:if="${dados.email != null}" th:text="${dados.email}"></p>
+                                <p th:if="${dados.email == null}">-</p>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <div class="no-break">
+                <h3>Informações de contato</h3>
                 <table class="tabela-representante">
                     <tr>
-                        <td colspan="3">
-                            <h4>Razão Social da empresa</h4>
-                            <p th:if="${dados.razaoSocial != null}" th:text="${dados.razaoSocial}"></p>
-                            <p th:if="${dados.razaoSocial == null}">-</p>
+                        <td>
+                            <h4>Nome Completo</h4>
+                            <p th:if="${dados.contato.nome != null}" th:text="${dados.contato.nome}"></p>
+                            <p th:if="${dados.contato.nome == null}">-</p>
                         </td>
                         <td>
-                            <h4>CNPJ</h4>
-                            <p th:if="${dados.cnpj != null}" th:text="${dados.cnpj}"></p>
-                            <p th:if="${dados.cnpj == null}">-</p>
-                        </td>
-
-                    </tr>
-
-                    <tr>
-                        <td>
-                            <h4>CEP</h4>
-                            <p th:if="${dados.endereco != null && dados.endereco.cep != null}"
-                               th:text="${dados.endereco.cep}"></p>
-                            <p th:if="${dados.endereco == null || dados.endereco.cep == null}">-</p>
-                        </td>
-
-                        <td colspan="2">
-                            <h4>Endereço</h4>
-                            <p th:if="${dados.endereco != null && dados.endereco.logradouro != null}"
-                               th:text="${dados.endereco.logradouro}"></p>
-                            <p th:if="${dados.endereco == null || dados.endereco.logradouro == null}">-</p>
-                        </td>
-
-                        <td>
-                            <h4>Número</h4>
-                            <p th:if="${dados.endereco != null && dados.endereco.numero != null}"
-                               th:text="${dados.endereco.numero}"></p>
-                            <p th:if="${dados.endereco == null || dados.endereco.numero == null}">-</p>
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <td>
-                            <h4>Complemento</h4>
-                            <p th:if="${dados.endereco != null && dados.endereco.complemento != null}"
-                               th:text="${dados.endereco.complemento}"></p>
-                            <p th:if="${dados.endereco == null || dados.endereco.complemento == null}">-</p>
-                        </td>
-                        <td>
-                            <h4>Bairro</h4>
-                            <p th:if="${dados.endereco != null && dados.endereco.bairro != null}"
-                               th:text="${dados.endereco.bairro}"></p>
-                            <p th:if="${dados.endereco == null || dados.endereco.bairro == null}">-</p>
-                        </td>
-
-                        <td>
-                            <h4>Cidade</h4>
-                            <p th:if="${dados.endereco != null && dados.endereco.municipio != null && dados.endereco.municipio.estado != null && dados.endereco.municipio.estado.nome != null}"
-                               th:text="${dados.endereco.municipio.estado.nome}"></p>
-                            <p th:if="${dados.endereco == null || dados.endereco.municipio == null || dados.endereco.municipio.estado == null || dados.endereco.municipio.estado.nome == null}">
-                                -</p>
-                        </td>
-                        <td>
-                            <h4>Estado</h4>
-                            <p th:if="${dados.endereco != null && dados.endereco.municipio != null && dados.endereco.municipio.estado != null && dados.endereco.municipio.estado.nome != null}"
-                               th:text="${dados.endereco.municipio.estado.nome}"></p>
-                            <p th:if="${dados.endereco == null || dados.endereco.municipio == null || dados.endereco.municipio.estado == null || dados.endereco.municipio.estado.nome == null}">
-                                -</p>
+                            <h4>CPF</h4>
+                            <p th:if="${dados.contato.documento != null}" th:text="${dados.contato.documento}"></p>
+                            <p th:if="${dados.contato.documento == null}">-</p>
                         </td>
                     </tr>
                     <tr>
                         <td>
                             <h4>Telefone</h4>
-                            <p th:if="${dados.telefone != null}"
-                               th:text="${dados.telefone}"></p>
-                            <p th:if="${dados.telefone == null}">-</p>
+                            <p th:if="${dados.contato.telefone != null}"
+                               th:text="${dados.contato.telefone}"></p>
+                            <p th:if="${dados.contato.telefone == null}">-</p>
                         </td>
-                        <td colspan="2">
+                        <td>
                             <h4>E-mail</h4>
-                            <p th:if="${dados.email != null}" th:text="${dados.email}"></p>
-                            <p th:if="${dados.email == null}">-</p>
+                            <p th:if="${dados.contato.email != null}" th:text="${dados.contato.email}"></p>
+                            <p th:if="${dados.contato.email == null}">-</p>
                         </td>
+
+
                     </tr>
                 </table>
-
             </div>
-
-            <h3>Informações de contato</h3>
-            <table class="tabela-representante">
-                <tr>
-                    <td>
-                        <h4>Nome Completo</h4>
-                        <p th:if="${dados.contato.nome != null}" th:text="${dados.contato.nome}"></p>
-                        <p th:if="${dados.contato.nome == null}">-</p>
-                    </td>
-                    <td>
-                        <h4>CPF</h4>
-                        <p th:if="${dados.contato.documento != null}" th:text="${dados.contato.documento}"></p>
-                        <p th:if="${dados.contato.documento == null}">-</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <h4>Telefone</h4>
-                        <p th:if="${dados.contato.telefone != null}"
-                           th:text="${dados.contato.telefone}"></p>
-                        <p th:if="${dados.contato.telefone == null}">-</p>
-                    </td>
-                    <td>
-                        <h4>E-mail</h4>
-                        <p th:if="${dados.contato.email != null}" th:text="${dados.contato.email}"></p>
-                        <p th:if="${dados.contato.email == null}">-</p>
-                    </td>
-
-
-                </tr>
-            </table>
         </div>
     </div>
 </header>
