--- a/frontend/src/lib/mapa/mapa.scss
+++ b/frontend/src/lib/mapa/mapa.scss
@@ -7,7 +7,7 @@
 }
 
 .leaflet-top.leaflet-right {
-  top: 50px !important;
+  top: 65px !important;
 }
 
 .leaflet-top .leaflet-control {
@@ -67,18 +67,15 @@
 }
 
 .pesquisar-container {
-  display: flex;
-  align-items: center;
   position: absolute;
   top: 10px;
   right: 10px;
-  z-index: 1000;
-  font-size: 15px;
+  z-index: 1001;
+  font-size: 14px;
   line-height: 20px;
-  width: 300px;
+  width: 400px;
   border-radius: 4px;
   background-color: #ffffff;
-  padding-right: 5px;
 
   :focus-visible {
     border: none;
@@ -90,7 +87,6 @@
   }
 
   input {
-    font: inherit;
     width: 100%;
     border: 0;
     background-color: transparent;
@@ -99,8 +95,15 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 
-    height: 36px;
+    height: 50px;
     padding: 6px 35px 6px 10px;
+  }
+
+  .sugestao {
+    li {
+      font-size: 12px;
+      line-height: 20px;
+    }
   }
 }
 
@@ -110,9 +113,9 @@
 
 .card-tools {
   position: absolute;
-  top: 55px;
+  top: 67px;
   right: 10px;
-  width: 260px;
+  width: 300px;
   background: white;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -196,6 +199,7 @@
 
   .leaflet-control-coordinates,
   .pesquisar-container,
+  .pesquisar-sugestao-container,
   .card-tools,
   .leaflet-top.leaflet-right {
     display: none !important;
