feat: criação dos serviços para relatório

--- a/backend/src/main/resources/templates/ficha/caracterizacao.html
+++ b/backend/src/main/resources/templates/ficha/caracterizacao.html
@@ -58,8 +58,8 @@
                     <p th:if="${caracterizacaoImovel == null || caracterizacaoImovel.dataInclusaoFormatada == null}">
                         -</p>
                 </td>
-
             </tr>
+        </table>
     </div>
 </header>
 </html>
