--- a/backend/src/main/resources/static/css/main.css
+++ b/backend/src/main/resources/static/css/main.css
@@ -5,10 +5,10 @@
     background-color: #00f;
 }
 
-
 html {
     font-family: Inter, serif;
     line-height: 1.15;
+    font-size: 8pt;
 }
 
 
@@ -202,4 +202,57 @@ main {
     font-family: Arial, serif;
     font-size: 5pt;
     line-height: 0.5;
+}
+
+/* RELATÓRIO */
+
+.conteudo-relatorio .card {
+    border: none;
+
+}
+
+.conteudo-relatorio .card h2 {
+    text-align: center;
+}
+
+.card .tabela-conteudo-relatorio {
+    width: 100%;
+    border-spacing: 0;
+    margin-top: 2.5rem;
+    border-collapse: collapse;
+    border-radius: 0.315rem 0.315rem 0 0;
+    overflow: hidden;
+}
+
+.card .tabela-conteudo-relatorio tbody tr:nth-of-type(even) {
+  background-color: #F5F5F5;
+}
+.card .tabela-conteudo-relatorio td {
+    width: 25%;
+    padding: 0.438rem 0 0.438rem;
+}
+
+.card .tabela-conteudo-relatorio td:first-child {
+    padding-left: 1.5rem
+}
+
+.card .tabela-conteudo-relatorio h4 {
+    font-weight: 500;
+    line-height: 1rem;
+    margin: 0 0 0.25rem;
+}
+
+.card .tabela-conteudo-relatorio .button {
+    border-radius: 1.25rem;
+    padding: 0.5rem 0.875rem 0.25rem;
+}
+
+.card .tabela-conteudo-relatorio .button  {
+   color: #FFFFFF;
+}
+
+.card .tabela-conteudo-relatorio p {
+    font-size: 0.75rem;
+    font-weight: 400;
+    line-height: 1.25rem;
 }
